Fix values displayed in accounts and institutions view

In certain cases involving investment accounts the values displayed were not correct. This change makes sure that correct values are presented to the user.

BUG: 507370
FIXED-IN: 5.2.1